fix gap

--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ header .fecha {
 #vestimenta button {
   font-family: "Poiret One", sans-serif;
   font-weight: bold;
-  margin-top: 5vh;
+  margin-top: 3vh;
   font-size: 1em;
   padding: 10px 40px;
   border-radius: 10px;
